# DUNE-Plot

./: README.md
configs/: GenParticle.hh  Hit.hh  Variable.hh
duneplot/: CMakeLists.txt  GEANTCutOff.cxx  MultiPrim.cxx  Neutron.cxx  quick.cxx
helpers/: ArbitraryAnaInputManager.hh  InputManager.hh
plotting/: Figure.hh  MakeHist.hh  MakeHist2D.hh  MakeProfile.hh  PrettyPlot.hh
